--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -767,4 +767,6 @@
     <string name="info_maintenance_sync_deleted_book_records">Это позволит проверить историю удаленных книг из предыдущего импорта с другого устройства и синхронизировать эти удаления. Другими словами, книги, удаленные на другом устройстве, будут удалены и на этом устройстве.</string>
     <string name="option_clear_deleted_book_records">Очистить историю удаленных книг</string>
     <string name="info_maintenance_clear_deleted_book_records">Это очистит историю удаленных книг. При этом фактические книги удалены не будут.</string>
+    <string name="error_type_not_supported">Тип не поддерживается: %1$s …</string>
+    <string name="info_books_deleted">Книги удалены: %1$d</string>
 </resources>
