--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,13 +148,16 @@
     <!-- A website deliberately blocked us from accessing it. -->
     <string name="error_site_access_blocked">Access was blocked by the website.</string>
     <!-- Generic Authorization failure. -->
-    <string name="error_authorization_failed">Authorization failed</string>
+    <string name="error_http_401_authorization_failed">Authorization failed</string>
     <!-- 'Site' Authorization failure. Param 1: the website name -->
-    <string name="error_site_authorization_failed">%1$s authorization resulted in an error.</string>
+    <string name="error_http_401_site_authorization_failed">%1$s authorization resulted in an error.</string>
     <!-- Generic Authentication failure. -->
     <string name="X_error_authentication_failed">Authentication failed</string>
     <!-- 'Site' Authentication failure. Param 1: the website name -->
     <string name="error_site_authentication_failed">%1$s authentication failed</string>
+    <!-- 'Site' Forbidden. Param 1: the website name -->
+    <string name="error_http_403_site_forbidden">%1$s has blocked access.</string>
+    <string name="error_http_403_forbidden">Access was blocked.</string>
     <!-- Shared Storage file system access fails for some reason. No specifics. -->
     <string name="error_storage_not_accessible">Please check that storage is accessible.</string>
     <!-- Displayed when any write operation to the database, or to Shared Storage fails
